--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.17",
     "axios": "^1.7.9",
     "lucide-react": "^0.471.0",
     "react": "^18.3.1",
@@ -17,6 +18,7 @@
     "react-hot-toast": "^2.5.1",
     "react-player": "^2.16.0",
     "react-router-dom": "^7.1.1",
+    "tailwindcss": "^4.0.17",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -29,7 +31,6 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "tailwindcss": "^3.4.17",
     "vite": "^6.0.5"
   }
 }
